corrigindo erros de responsividade

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         Deixe que Deus interprete.
     </p>
 </section>
-<footer>Site criado por <a href="https://github.com/thaisramosp" target="_blank">Thais Ramos</a> para o Desafio 12 do Curso em Vídeo
+<footer>Desenvolvido por <a href="https://github.com/thaisramosp" target="_blank">Thais Ramos</a> para o Desafio 12 do Curso em Vídeo
 </footer>
 </body>
 </html>
